fix: Reduce table font size, remove scrollbar

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -488,9 +488,10 @@ body {
   border-collapse: collapse;
   border-radius: var(--ifm-global-radius);
   border: var(--ifm-table-border-width) solid var(--ifm-table-border-color);
-  font-size: var(--ifm-h5-font-size);
+  font-size: .8rem;
   margin: 1.5rem 0;
   overflow: scroll;
+  scrollbar-width: none;
 }
 
 /* Table header */
